# GNXRayTracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
accelerator/: BVHAccel.cpp  BVHAccel.h
camera/: Orthographic.cpp  Orthographic.h  Perspective.cpp  Perspective.h
core/: Camera.cpp  Camera.h  Filter.cpp  Filter.h  GNXRayTracer.h  Geometry.h  Integrator.cpp  Integrator.h  Interaction.cpp  Interaction.h  Interpolation.cpp  Interpolation.h  Light.cpp  Light.h  LightDistribution.cpp  LightDistribution.h  LowDiscrepancy.cpp  LowDiscrepancy.h  MIPMap.cpp  MIPMap.h  Material.cpp  Material.h  Medium.cpp  Medium.h  Memory.cpp  Memory.h  MicroFacet.cpp  MicroFacet.h  Primitive.cpp  Primitive.h  Quaternion.cpp  Quaternion.h  RNG.h  Reflection.cpp  Reflection.h  Sampler.cpp  Sampler.h  Sampling.cpp  Sampling.h  Scene.cpp  (+15 more)
filters/: GaussianFilter.cpp  GaussianFilter.h
integrators/: DirectLightingIntegrator.cpp  DirectLightingIntegrator.h  PathIntegrator.cpp  PathIntegrator.h  VolPathIntegrator.cpp  VolPathIntegrator.h  WhittedIntegrator.cpp  WhittedIntegrator.h
lights/: DiffuseAreaLight.cpp  DiffuseAreaLight.h  DistantLight.cpp  DistantLight.h  InfiniteAreaLight.cpp  InfiniteAreaLight.h  LightDistribution.cpp  LightDistribution.h  PointLight.cpp  PointLight.h  SkyBoxLight.cpp  SkyBoxLight.h  SpotLight.cpp  SpotLight.h
materials/: DisneyMaterial.cpp  DisneyMaterial.h  GlassMaterial.cpp  GlassMaterial.h  Matte.cpp  MatteMaterial.cpp  MatteMaterial.h  MetalMaterial.cpp  MetalMaterial.h  MirrorMaterial.cpp  MirrorMaterial.h  PlasticMaterial.cpp  PlasticMaterial.h
media/: GridDensityMedium.cpp  GridDensityMedium.h  HomogeneousMedium.cpp  HomogeneousMedium.h
samplers/: Halton.cpp  Halton.h  HaltonSampler.cpp  HaltonSampler.h  LowDiscrepancy.h  SobolMatrices.cpp  SobolMatrices.h
shape/: Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  plyRead.h
textures/: Constant.cpp  ConstantTexture.cpp  ConstantTexture.h  ImageTexture.cpp  ImageTexture.h
ui/: DataTreeWidget.cpp  DataTreeWidget.h  DebugText.cpp  DebugText.h  DisplayWidget.cpp  DisplayWidget.h  FrameBuffer.cpp  FrameBuffer.h  IMAGraphicsView.cpp  IMAGraphicsView.h  InteractionDockWidget.cpp  InteractionDockWidget.h  MainWindow.cpp  MainWindow.h  MaterialList.cpp  MaterialList.h  ModelList.cpp  ModelList.h  RenderStatus.cpp  RenderStatus.h  RenderThread.cpp  RenderThread.h  Utils.cpp  Utils.h  main.cpp
